flex alignment fixed

--- a/week2/main.css
+++ b/week2/main.css
@@ -12,14 +12,14 @@
 
 * {
   -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+  box-sizing: inherit;
   margin: 0;
   padding: 0;
 }
 
 html {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -48,7 +48,11 @@ header {
   height: 64px;
   text-align: center;
   line-height: 64px;
-  background: -webkit-linear-gradient(0deg, var(--color-primary), var(--color-secondary));
+  background: -webkit-linear-gradient(
+    0deg,
+    var(--color-primary),
+    var(--color-secondary)
+  );
   color: #ffffff;
 }
 
@@ -66,7 +70,7 @@ section h2 {
   text-align: center;
   color: #ffffff;
   -webkit-box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
 }
 
 section:first-child h2 {
@@ -85,7 +89,7 @@ section:nth-child(2) h2 {
   padding: var(--gutter);
   border-radius: var(--border-radius);
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 
   position: relative;
   width: 100%;
@@ -93,14 +97,18 @@ section:nth-child(2) h2 {
 
 .grid-item:hover {
   -webkit-transform: translateY(-5px);
-      -ms-transform: translateY(-5px);
-          transform: translateY(-5px);
+  -ms-transform: translateY(-5px);
+  transform: translateY(-5px);
   -webkit-box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.2) !important;
-          box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.2) !important;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.2) !important;
 }
 
 .grid-item:hover h3 {
-  background: -webkit-linear-gradient(0deg, var(--color-primary), var(--color-secondary));
+  background: -webkit-linear-gradient(
+    0deg,
+    var(--color-primary),
+    var(--color-secondary)
+  );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -158,7 +166,7 @@ section:nth-child(2) h2 {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   margin-right: calc(-1 * var(--gutter));
   margin-left: calc(-1 * var(--gutter));
 }
@@ -170,21 +178,17 @@ section:nth-child(2) h2 {
   }
 
   #grid-flex .grid-item:first-child {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 100%;
-            flex: 0 0 100%;
-    max-width: 100%;
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
   }
 
-  #grid-floats .grid-item:nth-child(n+2) {
+  #grid-floats .grid-item:nth-child(n + 2) {
     width: calc((100% - var(--gutter)) / 2);
   }
 
-  #grid-flex .grid-item:nth-child(n+2) {
-    -webkit-box-flex: 1;
-        -ms-flex: 0 0 calc(50% - 2 * var(--gutter));
-            flex: 0 0 calc(50% - 2 * var(--gutter));
-    max-width: 50%;
+  #grid-flex .grid-item:nth-child(n + 2) {
+    -ms-flex: 0 0 calc(50% - 2 * var(--gutter));
+    flex: 0 0 calc(50% - var(--gutter) / 2);
   }
 
   /* FIST ELEMENTS IN EACH ROW EXCEPT 1st CHILD */
@@ -205,10 +209,8 @@ section:nth-child(2) h2 {
   }
 
   #grid-flex .grid-item:nth-child(n + 1) {
-    -webkit-box-flex: 1;
-        -ms-flex: 0 0 calc(50% - 2 * var(--gutter));
-            flex: 0 0 calc(50% - 2 * var(--gutter));
-    max-width: 50%;
+    -ms-flex: 0 0 calc(50% - var(--gutter) / 2);
+    flex: 0 0 calc(50% - var(--gutter) / 2);
   }
 
   .grid-item:first-child {
@@ -221,10 +223,8 @@ section:nth-child(2) h2 {
   }
 
   #grid-flex .grid-item:nth-child(n + 3) {
-    -webkit-box-flex: 1;
-        -ms-flex: 0 0 calc(33.3333% - 2 * var(--gutter));
-            flex: 0 0 calc(33.3333% - 2 * var(--gutter));
-    max-width: 33.3333%;
+    -ms-flex: 0 0 calc(33.3333% - 2 * var(--gutter) / 3);
+    flex: 0 0 calc(33.3333% - 2 * var(--gutter) / 3);
   }
 
   /* FROM 3rd CHILD, WITHOUT THE LAST ELEMENT IN THE ROW */
@@ -251,10 +251,8 @@ section:nth-child(2) h2 {
   }
 
   #grid-flex .grid-item:first-child {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 calc(50% - var(--gutter));
-            flex: 0 0 calc(50% - var(--gutter));
-    max-width: 50%;
+    -ms-flex: 0 0 calc(50% - var(--gutter) / 2);
+    flex: 0 0 calc(50% - var(--gutter) / 2);
   }
 
   .grid-item:first-child img {
@@ -269,10 +267,8 @@ section:nth-child(2) h2 {
   }
 
   #grid-flex .grid-item:nth-child(n + 2) {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 calc(25% - var(--gutter));
-            flex: 0 0 calc(25% - var(--gutter));
-    max-width: 25%;
+    -ms-flex: 0 0 calc(25% - 3 * var(--gutter) / 4);
+    flex: 0 0 calc(25% - 3 * var(--gutter) / 4);
   }
 
   /* FIST ELEMENTS IN EACH ROW AFTER FIRST 3 CHILDREN */
